Revise mobile UI flow for museum carousel

--- a/index.html
+++ b/index.html
@@ -17,15 +17,27 @@
         <!-- Tela inicial -->
         <section id="intro-screen" class="screen active">
           <div class="intro-card">
-            <div class="logo-orb"></div>
-            <div class="intro-text">
-              <h1>Museu Matriosca</h1>
-              <p class="subtitle">
-                Arte, memória e tecnologia se encontram para revelar novas
-                perspectivas do sertão.
-              </p>
+            <div class="intro-hero">
+              <div class="logo-mark" aria-hidden="true">
+                <span class="logo-ring"></span>
+                <span class="logo-core"></span>
+              </div>
+              <div class="intro-text">
+                <p class="eyebrow">Museu imersivo</p>
+                <h1>Museu Matriosca</h1>
+                <p class="subtitle">
+                  Uma jornada sensorial pelas memórias do sertão com arte,
+                  tradição e realidade aumentada.
+                </p>
+              </div>
             </div>
-            <button id="enter-gallery-btn" type="button">Entrar</button>
+            <div class="intro-actions">
+              <button id="enter-gallery-btn" type="button">Explorar agora</button>
+              <div class="intro-footnote">
+                <span class="pulse"></span>
+                <span>Arraste para escolher a exposição</span>
+              </div>
+            </div>
           </div>
         </section>
 
