Center mobile UI and refresh branding

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>Museu Matriosca - Exibições</title>
+    <title>Casa de Saberes Cego Aderaldo - Museu Matriosca</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -18,12 +18,13 @@
         <section id="intro-screen" class="screen active">
           <div class="intro-card">
             <div class="intro-hero">
-              <div class="logo-mark" aria-hidden="true">
-                <span class="logo-ring"></span>
-                <span class="logo-core"></span>
-              </div>
+              <img
+                src="img/casa-saberes-logo.svg"
+                alt="Casa de Saberes Cego Aderaldo"
+                class="brand-logo"
+              />
               <div class="intro-text">
-                <p class="eyebrow">Museu imersivo</p>
+                <p class="eyebrow">Casa de Saberes Cego Aderaldo</p>
                 <h1>Museu Matriosca</h1>
                 <p class="subtitle">
                   Uma jornada sensorial pelas memórias do sertão com arte,
