--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="intro-card">
             <div class="intro-hero">
               <img
-                src="img/casa-saberes-logo.svg"
+                src="img/casa-saberes-logo.png"
                 alt="Casa de Saberes Cego Aderaldo"
                 class="brand-logo"
               />
