atualizações nos textos

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <p class="eyebrow">Casa de Saberes Cego Aderaldo</p>
                 <h1>Museu Matriosca</h1>
                 <p class="subtitle">
-                  Uma jornada sensorial pelas memórias do sertão com arte,
-                  tradição e realidade aumentada.
+                  Uma jornada pelo acervo de 2025 com arte e realidade aumentada.
                 </p>
               </div>
             </div>
