Move carousel hint without scroll changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <span class="sr-only">Próxima exposição</span>
             </button>
           </div>
-          <div class="interaction-hint carousel-hint">
+          <div class="intro-footnote carousel-hint">
             <span class="pulse"></span>
             <span>Arraste para escolher a exposição</span>
           </div>
