Restore AR close control and highlight reticle

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
       </div>
     </div>
     <div id="ar-overlay" aria-live="polite" hidden>
+      <button
+        id="close-ar-btn"
+        type="button"
+        aria-label="Fechar câmera e voltar ao museu"
+      >
+        <span aria-hidden="true">×</span>
+      </button>
       <div class="ar-overlay-content">
         <p id="ar-overlay-status">Aponte a câmera para uma parede e toque para posicionar.</p>
         <button id="exit-ar-btn" type="button" aria-label="Sair da realidade aumentada">
