Add dedicated AR back button

--- a/index.html
+++ b/index.html
@@ -93,5 +93,16 @@
         </section>
       </div>
     </div>
+
+    <div id="ar-overlay" class="ar-overlay" hidden>
+      <button
+        id="ar-back-btn"
+        class="ar-back-btn"
+        type="button"
+        aria-label="Voltar para a exposição"
+      >
+        ← Voltar para a exposição
+      </button>
+    </div>
   </body>
 </html>
