Add back button to AR camera view

--- a/index.html
+++ b/index.html
@@ -93,5 +93,8 @@
         </section>
       </div>
     </div>
+    <button id="camera-back-btn" type="button" aria-label="Voltar para a página anterior">
+      ← Voltar
+    </button>
   </body>
 </html>
