Recriar botão de retorno na câmera

--- a/index.html
+++ b/index.html
@@ -93,5 +93,15 @@
         </section>
       </div>
     </div>
+    <div id="camera-overlay" aria-hidden="true">
+      <button
+        id="camera-back-btn"
+        type="button"
+        class="ghost-btn"
+        aria-label="Voltar para a página anterior"
+      >
+        ← Voltar
+      </button>
+    </div>
   </body>
 </html>
