--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
             <span class="start-label">Iniciar experiência em RA</span>
           </div>
         </section>
+
+        <div id="image-modal" aria-hidden="true">
+          <div class="image-modal__overlay" data-close-modal></div>
+          <div class="image-modal__content" role="dialog" aria-modal="true">
+            <button
+              type="button"
+              class="image-modal__close"
+              aria-label="Fechar visualização da obra"
+              data-close-modal
+            >
+              ×
+            </button>
+            <img id="image-modal-img" src="" alt="" />
+            <p id="image-modal-caption"></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
