--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             <div class="details-copy">
               <h2 id="exibicao-titulo"></h2>
               <p id="exibicao-descricao"></p>
+              <button id="open-info-btn" class="info-chip" type="button">
+                <span aria-hidden="true">ℹ</span>
+                <span>Informações</span>
+              </button>
             </div>
           </div>
           <div id="obras-lista">
@@ -91,6 +95,32 @@
             <span class="start-label">Iniciar experiência em RA</span>
           </div>
         </section>
+
+        <div id="info-modal" aria-hidden="true">
+          <div class="info-modal__overlay" data-close-info></div>
+          <div class="info-modal__content" role="dialog" aria-modal="true">
+            <button
+              type="button"
+              class="info-modal__close"
+              aria-label="Fechar informações da exposição"
+              data-close-info
+            >
+              ×
+            </button>
+            <div class="info-modal__header">
+              <div class="info-modal__title-wrapper">
+                <p class="eyebrow">Texto curatorial e créditos</p>
+                <h3 id="info-modal-title"></h3>
+              </div>
+              <button id="info-audio-btn" type="button" class="info-audio-btn">
+                <span aria-hidden="true">🔊</span>
+                <span class="sr-only">Ouvir texto curatorial</span>
+              </button>
+            </div>
+            <div id="info-metadata" class="info-modal__meta"></div>
+            <div id="info-modal-text" class="info-modal__body"></div>
+          </div>
+        </div>
 
         <div id="image-modal" aria-hidden="true">
           <div class="image-modal__overlay" data-close-modal></div>
