--- a/index.html
+++ b/index.html
@@ -82,16 +82,6 @@
               <h2 id="exibicao-titulo"></h2>
               <p id="exibicao-descricao"></p>
               <button id="open-info-btn" class="info-chip" type="button">
-                <svg
-                  aria-hidden="true"
-                  class="icon"
-                  viewBox="0 0 24 24"
-                  focusable="false"
-                >
-                  <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2" />
-                  <line x1="12" y1="10" x2="12" y2="16" stroke="currentColor" stroke-width="2" />
-                  <circle cx="12" cy="7" r="1.2" fill="currentColor" />
-                </svg>
                 <span>Informações</span>
               </button>
             </div>
@@ -122,31 +112,10 @@
                 <h3 id="info-modal-title"></h3>
               </div>
               <button id="info-audio-btn" type="button" class="info-audio-btn">
-                <svg
-                  aria-hidden="true"
-                  class="icon"
-                  viewBox="0 0 24 24"
-                  focusable="false"
-                >
-                  <path
-                    d="M5 15V9h3.4L14 4.5V19.5L8.4 15H5z"
-                    fill="currentColor"
-                  />
-                  <path
-                    d="M16.5 8.5c1 .9 1.5 2 1.5 3.5s-.5 2.6-1.5 3.5"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                  <path
-                    d="M18.5 6.5c1.6 1.4 2.5 3.2 2.5 5.5s-.9 4.1-2.5 5.5"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
+                <span class="info-audio-icon" aria-hidden="true">
+                  <span class="info-audio-icon__box"></span>
+                  <span class="info-audio-icon__waves"></span>
+                </span>
                 <span class="sr-only">Ouvir texto curatorial</span>
               </button>
             </div>
