Refine info modal audio button and credits

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                   <span class="info-audio-icon__box"></span>
                   <span class="info-audio-icon__waves"></span>
                 </span>
+                <span class="info-audio-label">Áudio</span>
                 <span class="sr-only">Ouvir texto curatorial</span>
               </button>
             </div>
