Add AR hint overlay for surface guidance

--- a/index.html
+++ b/index.html
@@ -154,5 +154,14 @@
         </div>
       </div>
     </div>
+
+    <div
+      id="ar-hint"
+      class="ar-hint"
+      role="status"
+      aria-live="polite"
+    >
+      Aponte a câmera para uma parede com objetos para detectar a superfície.
+    </div>
   </body>
 </html>
