Simplify AR hint display

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       role="status"
       aria-live="polite"
     >
-      Aponte a câmera para uma parede com objetos para detectar a superfície.
+      Aponte a câmera para a parede com o quadro e mantenha por alguns segundos.
     </div>
   </body>
 </html>
