--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Página principal com a navegação da galeria e a experiência em realidade aumentada. -->
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +15,6 @@
   <body>
     <div id="ui">
       <div id="gallery-ui">
-        <!-- Tela inicial -->
         <section id="intro-screen" class="screen active">
           <div class="intro-card">
             <div class="intro-hero">
@@ -37,7 +37,6 @@
           </div>
         </section>
 
-        <!-- Carrossel das exposições -->
         <section id="carousel-screen" class="screen">
           <header class="screen-header">
             <h2>Escolha a exposição</h2>
@@ -48,9 +47,7 @@
               <span class="sr-only">Exposição anterior</span>
             </button>
             <div class="carousel-window">
-              <div id="carousel-track">
-                <!-- Slides inseridos via ui.js -->
-              </div>
+              <div id="carousel-track"></div>
             </div>
             <button id="carousel-next" class="carousel-nav" type="button">
               <span aria-hidden="true">›</span>
@@ -69,7 +66,6 @@
           <div id="carousel-indicators" aria-hidden="true"></div>
         </section>
 
-        <!-- Detalhes da exposição selecionada -->
         <section id="details-screen" class="screen">
           <header class="screen-header">
             <button id="voltar-btn" class="ghost-btn" type="button">
@@ -89,9 +85,7 @@
               </div>
             </div>
           </div>
-          <div id="obras-lista">
-            <!-- Obras e autores aparecem aqui -->
-          </div>
+          <div id="obras-lista"></div>
           <div id="start-wrapper">
             <button id="start-ar-btn" type="button"></button>
             <span class="start-label">Iniciar experiência em RA</span>
